<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.tanjiaming.www.bluetooth.MainActivity">
    <include
        layout="@layout/common_title_layout"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="20dp">
        <Button
            android:id="@+id/bt_deviceOne"
            android:layout_width="0dp"
            android:layout_height="180dp"
            android:layout_gravity="center"
            android:layout_weight="0.4"
            android:background="@color/colorPrimary"
            android:text="@string/app_title_activity1"
            android:layout_marginLeft="40dp"
            android:textColor="#fff" />
        <Button
            android:layout_width="0dp"
            android:layout_height="180dp"
            android:layout_weight="0.1"
            android:background="#fff"/>
        <Button
            android:id="@+id/bt_deviceTwo"
            android:layout_width="0dp"
            android:layout_height="180dp"
            android:layout_gravity="center"
            android:layout_marginRight="40dp"
            android:layout_weight="0.4"
            android:background="@color/colorPrimary"
            android:text="@string/app_title_activity2"
            android:textColor="#fff" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="40dp">
        <Button
            android:id="@+id/bt_deviceThree"
            android:layout_width="0dp"
            android:layout_height="180dp"
            android:layout_gravity="center"
            android:layout_weight="0.4"
            android:background="@color/colorPrimary"
            android:text="@string/app_title_activity3"
            android:layout_marginLeft="40dp"
            android:textColor="#fff" />
        <Button
            android:layout_width="0dp"
            android:layout_height="180dp"
            android:layout_weight="0.1"
            android:background="#fff"/>
        <Button
            android:id="@+id/bt_deviceFour"
            android:layout_width="0dp"
            android:layout_height="180dp"
            android:layout_gravity="center"
            android:layout_marginRight="40dp"
            android:layout_weight="0.4"
            android:background="@color/colorPrimary"
            android:text="@string/app_title_activity4"
            android:textColor="#fff" />
    </LinearLayout>
    <include
        layout="@layout/common_foot_layout"/>
</LinearLayout>
