<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_device_three"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.tanjiaming.www.bluetooth.DeviceThreeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="50dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="蓝牙模块名称:"/>
        <TextView
            android:id="@+id/tv_device_three_name_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="50dp">
        <ImageView
            android:id="@+id/iv_bl_connect_flag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/off"
            android:layout_gravity="center_vertical"/>
        <Button
            android:id="@+id/btn_scan_bl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_title_button_connected"
            android:layout_marginLeft="10dp"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="50dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="关门阻力"
            android:gravity="center"
            />
        <EditText
            android:id="@+id/et_device_three"
            style="?android:attr/textViewStyle"
            android:background="@null"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:gravity="end|center_vertical"
            android:layout_marginRight="10dp"
            android:textStyle="bold"
            android:text="0"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/app_unit_N"
            android:gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="  能    量  "
            android:gravity="center"
            />
        <EditText
            style="?android:attr/textViewStyle"
            android:background="@null"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:gravity="end|center_vertical"
            android:layout_marginRight="10dp"
            android:textStyle="bold"
            android:text="20"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/app_unit_J"
            android:gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="50dp">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_title_button_reset"/>
        <Button
            android:id="@+id/btn_device_three_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_title_button_back"/>
    </LinearLayout>
    <include
        layout="@layout/common_foot_layout"/>

</LinearLayout>
